// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentJs renders correctly 1`] = `
<div class="v-card v-sheet theme--light">Dummy component<div>Hello world</div>
</div>
`;

exports[`ComponentJs renders correctly with props 1`] = `
<div class="v-card v-sheet theme--light">My dummy Component<div>Hello world</div>
</div>
`;
